java/istio/infra/step-2/order-service/order-service-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: employee-details-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - service-mesh-demo-istio-ingress-gateway
  http:
  - match:
    - uri:
        prefix: /order-service
    route:
    - destination:
        host: order-service
        subset: v1
        port:
          number: 8080
      weight: 10    
    - destination:
        host: order-service
        subset: v2
        port:
          number: 8080
      weight: 50
    - destination:
        host: order-service
        subset: v3
        port:
          number: 8080
      weight: 40
